Actualizo index sin las imágenes

--- a/index.html
+++ b/index.html
@@ -223,28 +223,35 @@
 
   <div class="services">
     <div class="service">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="Netflix" />
-      <button data-name="Netflix" data-price="15000">Añadir Netflix - $15,000 COP</button>
+      <img src="netflix.png" alt="Netflix" />
+      <button data-name="Netflix" data-price="15000">Pantalla Netflix    $15,000</button>
     </div>
     <div class="service">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/Disney%2B_logo.svg" alt="Disney+" />
-      <button data-name="Disney+" data-price="13000">Añadir Disney+ - $13,000 COP</button>
+      <img src="disney.png" alt="Disney+" />
+      <button data-name="Disney+" data-price="8000">Pantalla Disney+ $8,000</button>
     </div>
     <div class="service">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Amazon_Prime_Video.svg" alt="Amazon Prime Video" />
-      <button data-name="Amazon Prime" data-price="12000">Añadir Amazon Prime - $12,000 COP</button>
+      <img src="amazon.png" alt="Amazon Prime Video" />
+      <button data-name="Amazon Prime" data-price="12000">Pantalla Amazon Prime $12,000</button>
     </div>
     <div class="service">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Max_Logo_2020.svg" alt="Max" />
-      <button data-name="Max" data-price="10000">Añadir Max - $10,000 COP</button>
+      <img src="max.png" alt="Max" />
+      <button data-name="Max" data-price="8000">Pantalla Max $8,000</button>
     </div>
+
     <div class="service">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/Vix_logo.svg" alt="ViX" />
-      <button data-name="ViX" data-price="12000">Añadir ViX - $12,000 COP</button>
+      <img src="vix.png" alt="ViX" />
+      <button data-name="ViX" data-price="12000">Pantalla ViX $12,000</button>
     </div>
+
     <div class="service">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Crunchyroll_Logo.svg" alt="Crunchyroll" />
-      <button data-name="Crunchyroll" data-price="12000">Añadir Crunchyroll - $12,000 COP</button>
+      <img src="chrunchyroll.png" alt="Crunchyroll" />
+      <button data-name="Crunchyroll" data-price="12000">Pantalla Crunchyroll $12,000</button>
+    </div>
+
+    <div class="service">
+      <img src="jellyfin.png" alt="jellyfin" />
+      <button data-name="jellyfin" data-price="18000">Pantalla jellyfin $18,000</button>
     </div>
   </div>
 
