Agrego nuevas imágenes y actualizo index.html

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   }
 
   .service img {
-    max-width: 100%;
-    height: auto;
+    height: 100px;
+    object-fit: contain;
     border-radius: 10px;
     margin-bottom: 12px;
   }
@@ -90,6 +90,37 @@
   .service button:hover {
     background-color: #d35400;
     color: white;
+  }
+
+  /* Tooltip */
+  .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+
+  .tooltip-text {
+    visibility: hidden;
+    width: 220px;
+    background-color: #333;
+    color: #fff;
+    text-align: left;
+    padding: 10px;
+    border-radius: 8px;
+    position: absolute;
+    z-index: 1;
+    bottom: 115%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s;
+    font-size: 0.9rem;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  }
+
+  .tooltip:hover .tooltip-text,
+  .tooltip:active .tooltip-text {
+    visibility: visible;
+    opacity: 1;
   }
 
   #cart {
@@ -222,56 +253,81 @@
   <h1>Grupolejessna Streaming</h1>
 
   <div class="services">
+
     <div class="service">
-      <img src="netflix.png" alt="Netflix" />
-      <button data-name="Netflix" data-price="15000">Pantalla Netflix    $15,000</button>
+      <div class="tooltip">
+        <img src="netflix.png" alt="Netflix" />
+        <span class="tooltip-text"><strong>Netflix:</strong> Películas, series y contenido exclusivo. Disfruta sin anuncios, en cualquier momento y lugar.</span>
+      </div>
+      <button data-name="Netflix" data-price="15000">Pantalla Netflix $15,000</button>
     </div>
+
     <div class="service">
-      <img src="disney.png" alt="Disney+" />
+      <div class="tooltip">
+        <img src="disney.png" alt="Disney+" />
+        <span class="tooltip-text"><strong>Disney+:</strong> Todo el contenido de Disney, Marvel, Pixar y Star Wars en un solo lugar.</span>
+      </div>
       <button data-name="Disney+" data-price="8000">Pantalla Disney+ $8,000</button>
     </div>
+
     <div class="service">
-      <img src="amazon.png" alt="Amazon Prime Video" />
+      <div class="tooltip">
+        <img src="amazon.png" alt="Amazon Prime" />
+        <span class="tooltip-text"><strong>Amazon Prime:</strong> Series, películas y contenido exclusivo de Prime Video.</span>
+      </div>
       <button data-name="Amazon Prime" data-price="12000">Pantalla Amazon Prime $12,000</button>
     </div>
+
     <div class="service">
-      <img src="max.png" alt="Max" />
+      <div class="tooltip">
+        <img src="max.png" alt="Max" />
+        <span class="tooltip-text"><strong>Max:</strong> Disfruta contenido de HBO, Warner Bros. y más, todo en una sola plataforma.</span>
+      </div>
       <button data-name="Max" data-price="8000">Pantalla Max $8,000</button>
     </div>
 
     <div class="service">
-      <img src="vix.png" alt="ViX" />
+      <div class="tooltip">
+        <img src="vix.png" alt="ViX" />
+        <span class="tooltip-text"><strong>ViX:</strong> Series, películas, deportes y noticias en español. Gratis y premium.</span>
+      </div>
       <button data-name="ViX" data-price="12000">Pantalla ViX $12,000</button>
     </div>
 
     <div class="service">
-      <img src="chrunchyroll.png" alt="Crunchyroll" />
+      <div class="tooltip">
+        <img src="crunchyroll.png" alt="Crunchyroll" />
+        <span class="tooltip-text"><strong>Crunchyroll:</strong> Anime subtitulado y doblado en alta calidad. Nuevos episodios cada semana.</span>
+      </div>
       <button data-name="Crunchyroll" data-price="12000">Pantalla Crunchyroll $12,000</button>
     </div>
 
     <div class="service">
-      <img src="jellyfin.png" alt="jellyfin" />
-      <button data-name="jellyfin" data-price="18000">Pantalla jellyfin $18,000</button>
+      <div class="tooltip">
+        <img src="jellyfin.png" alt="Jellyfin" style="height: 80px; object-fit: contain;" />
+        <span class="tooltip-text"><strong>Jellyfin:</strong> Plataforma personal de streaming. Organiza y transmite tu contenido sin límites.</span>
+      </div>
+      <button data-name="Jellyfin" data-price="18000">Pantalla Jellyfin $18,000</button>
     </div>
+
   </div>
 
   <div id="cart">
-    <h2>Carrito de compras</h2>
+    <h2>🛒Carrito de Compras🛒</h2>
     <ul id="cartItems"></ul>
     <div id="total">Total: $0 COP</div>
-
-    <button id="sendButton">Enviar comprobante</button>
+    <button id="sendButton">Enviar Pedido⤴️</button>
   </div>
 
   <div id="paymentMethods">
     <h3>Medios de pago disponibles:</h3>
     <div class="payment-row">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Nequi_Logo.svg" alt="Nequi Logo" />
-      <span>Nequi: +57 300 1234567</span>
+      <img src="nequi.png" alt="Nequi" />
+      <span>Nequi: +57 3146094762</span>
     </div>
     <div class="payment-row">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Daviplata_Logo.svg" alt="Daviplata Logo" />
-      <span>Daviplata: +57 310 7654321</span>
+      <img src="daviplata.png" alt="Daviplata" />
+      <span>Daviplata: +57 3146094762</span>
     </div>
   </div>
 
@@ -292,7 +348,7 @@
       total += item.price;
       const li = document.createElement('li');
       li.textContent = `${item.name} - $${item.price.toLocaleString()} COP`;
-      
+
       const removeBtn = document.createElement('button');
       removeBtn.textContent = 'Eliminar';
       removeBtn.onclick = () => {
@@ -328,9 +384,9 @@
 
     const total = cart.reduce((sum, item) => sum + item.price, 0);
     message += `%0ATotal: $${total.toLocaleString()} COP%0A`;
-    message += `%0APara poderle despachar sus servicios, favor adjuntar el comprobante del pago aqui 👇🏼 Gracias.`;
+    message += `%0APara poderle despachar sus servicios, favor adjuntar el comprobante del pago aquí 👇🏼 Gracias.`;
 
-    const phoneNumber = '573113077008'; // Cambia este número por el tuyo
+    const phoneNumber = '573146094762';
     const url = `https://wa.me/${phoneNumber}?text=${message}`;
     window.open(url, '_blank');
   });
